--- a/styles/main.css
+++ b/styles/main.css
@@ -57,3 +57,7 @@ a{
     line-height: 1.7rem;
 }
 
+p{
+    text-align: left;
+}
+
