--- a/styles/style.css
+++ b/styles/style.css
@@ -38,7 +38,7 @@
 
 @media (min-width: 860px){    
     :root{
-        font-size: 16px;
+        font-size: 20px;
     }
 }
 
@@ -74,7 +74,7 @@
         top: 100px;
         left: 0%;
         width: 100%;
-        background-color: var(--purple);
+        background-color: var(--purple-dark);
         border: 0;
     }
 
